[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/ban.svg" type="Texture" id=1]
[ext_resource path="res://assets/delete.svg" type="Texture" id=2]
[ext_resource path="res://assets/timeout.svg" type="Texture" id=3]
[ext_resource path="res://src/chat/ChatMessage.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Titillium-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/Titillium-BoldItalic.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/Titillium-Bold.otf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/fonts/Titillium-RegularItalic.otf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[node name="ChatMessage" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
size_flags_horizontal = 3
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ModButtons" type="CenterContainer" parent="HBoxContainer"]
margin_right = 104.0
margin_bottom = 586.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ModButtons"]
margin_top = 283.0
margin_right = 104.0
margin_bottom = 303.0

[node name="Ban" type="Button" parent="HBoxContainer/ModButtons/HBoxContainer"]
margin_right = 32.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
icon = ExtResource( 1 )
flat = true
expand_icon = true

[node name="Timeout" type="Button" parent="HBoxContainer/ModButtons/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
hint_tooltip = "Timeout user for"
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="Delete" type="Button" parent="HBoxContainer/ModButtons/HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 108.0
margin_right = 112.0
margin_bottom = 586.0

[node name="MessageBody" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 116.0
margin_right = 951.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Reply" type="Label" parent="HBoxContainer/MessageBody"]
visible = false
margin_right = 835.0
margin_bottom = 14.0
size_flags_horizontal = 3
clip_text = true

[node name="Message" type="RichTextLabel" parent="HBoxContainer/MessageBody"]
margin_right = 835.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
fit_content_height = true

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 955.0
margin_right = 959.0
margin_bottom = 586.0

[node name="ReplyCont" type="CenterContainer" parent="HBoxContainer"]
margin_left = 963.0
margin_right = 1010.0
margin_bottom = 586.0

[node name="Reply" type="Button" parent="HBoxContainer/ReplyCont"]
margin_top = 283.0
margin_right = 47.0
margin_bottom = 303.0
text = "Reply"

[connection signal="pressed" from="HBoxContainer/ModButtons/HBoxContainer/Ban" to="." method="_on_Ban_pressed"]
[connection signal="pressed" from="HBoxContainer/ModButtons/HBoxContainer/Timeout" to="." method="_on_Timeout_pressed"]
[connection signal="pressed" from="HBoxContainer/ModButtons/HBoxContainer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="HBoxContainer/ReplyCont/Reply" to="." method="_on_Reply_pressed"]
